# ECS

./: CMakeLists.txt  build_and_run.sh  doc.txt  todo.txt
cmake/: ecs-config.cmake.in
ecs/: CMakeLists.txt
ecs/include/: ecs.h  ecs_types.h  simpleString.h  storage.h  string_hash.h
ecs/src/: any.h  ecs.cpp  main.cpp  string_hash.cpp  template.h  tuple.h
samples/sandbox/: CMakeLists.txt
samples/sandbox/src/: main.cpp
src/: any.h  ecs.cpp  ecs.h  ecs_types.h  main.cpp  simpleString.h  storage.h  string_hash.cpp  string_hash.h
